# Toulmini

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTINUE_PROMPT.md  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml  verify_toulmini.py  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  SPEC.md  TOULMINI_SPEC.md  configuration.md  installation.md
docs/concepts/: architecture.md  toulmin-model.md
docs/getting-started/: configuration.md  installation.md
docs/guides/: examples.md  mcp-integration.md
examples/: README.md  council_integration.json  phase1_data_claim.json  phase2_warrant_backing.json  phase3_rebuttal_qualifier.json  phase4_verdict.json  quickstart.py
scripts/: setup_mcp.py  validate_mcp.py
src/toulmini/: __init__.py  cli.py  config.py  exceptions.py  mcp_setup.py  prompts.py  server.py  tools.py
src/toulmini/models/: __init__.py  base.py  chain.py  components.py
tests/: test_cli.py  test_config.py  test_failure_modes.py  test_happy_path.py  test_models.py  test_server.py  test_setup.py
web/: index.html  style.css
