[project]
name = "toulmini"
version = "1.0.0"
description = "Local MCP server implementing Toulmin's argumentation model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
toulmini = "toulmini.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toulmini"]
