[project]
name = "toulmini"
version = "1.0.0"
description = "Argumentation model: 7 components, 4 phases. Bad logic crashes. Good logic flows."
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://toulmini-web.pages.dev/"
Repository = "https://github.com/Hmbown/Toulmini"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
toulmini = "toulmini.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toulmini"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
