[project]
name = "toulmini"
version = "2.0.0"
description = "Argumentation model: 7 components, 4 phases. Bad logic crashes. Good logic flows."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://toulmini-web.pages.dev/"
Documentation = "https://github.com/Hmbown/Toulmini/tree/main/docs"
Repository = "https://github.com/Hmbown/Toulmini"

[project.scripts]
toulmini = "toulmini.server:main"
toulmini-cli = "toulmini.cli:main"
toulmini-setup-mcp = "toulmini.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toulmini"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
